deploy/k8s/wissen-backend/wissen-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wissen-backend-deployment
  labels:
    app: wissen-backend
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: wissen-backend
  template:
    metadata:
      labels:
        app: wissen-backend
    spec:
      containers:
        - name: wissen-backend
          image: ajaxsoften/wissen-backend:$COMMIT_SHA1
          ports:
            - containerPort: 80
