deploy/k8s/wissen-backend/wissen-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wissen-backend-service
spec:
  type: NodePort
  selector:
    app: wissen-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
